5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1596_842.log
== TEST (2019-04-02 02:40:08) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
prig_dig = entrada // 1000
pergasegdigito = entrada % 1000
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:45:35) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
prig_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsgdigito % 100
ter dig = pegaarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
File "XXXX", line 6
    ter dig = pegaarterceirodigito // 10
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:45:46) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
prig_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsgdigito % 100
ter dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.143098
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 6
    ter dig = pegarterceirodigito // 10
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:45:50) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
prig_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsgdigito % 100
ter dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
File "XXXX", line 6
    ter dig = pegarterceirodigito // 10
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:46:04) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
prig_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsgdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
File "XXXX", line 10
    soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:46:07) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
prig_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsgdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.136113
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 10
    soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:46:23) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsgdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.140241
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 10
    soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:47:03) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
File "XXXX", line 10
    soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:47:09) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.132583
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 10
    soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:10:37) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.164463
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 10
    soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:10:39) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
File "XXXX", line 10
    soma-dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:10:51) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pegarterceirodigito = pegarsegdigito % 100
NameError: name 'pegarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:10:55) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10 
quar_dig = pegarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.190116
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 5, in <module>
    pegarterceirodigito = pegarsegdigito % 100
NameError: name 'pegarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:12:17) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:12:20) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.156234
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:13:07) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pegarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:13:10) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pegarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.181317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:24:09) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pegarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg-dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:24:23) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pegarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:24:27) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pegarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.222441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:33:29) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pegarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:34:04) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:34:07) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.145409
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:42:08) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:42:11) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pergarsegdigito = entrada % 1000
seg_dig = pergarsegdigito // 100
pegarterceirodigito = pergarsegdigito % 100
ter_dig = pergarterceirodigito // 10
pergarquartodigito = pergarterceirodigito % 10 
quar_dig = pergarterceirodigito % 10 

soma_dos_digitos = prig_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.171932
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 6, in <module>
    ter_dig = pergarterceirodigito // 10
NameError: name 'pergarterceirodigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:31:12) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.140371
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
